<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDefault"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:background="@color/CustomColorButtonStart"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/btnback"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_back" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/Tabtittledetailscore"
                    android:textColor="@color/colorLogin"
                    android:textSize="@dimen/textsizeTitle"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:background="@color/colorBackgroundLoginOne"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.3"
            android:gravity="center|left"
            android:orientation="horizontal">

            <TextView
                android:textSize="@dimen/textsizeScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detailMonhoc"
                android:textColor="@color/colorLogin"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|left"
            android:orientation="horizontal">

            <TextView
                android:textSize="@dimen/textsizeScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hoa1"
                android:textColor="@color/colorLogin"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:background="@drawable/borderbottom"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|left">

                <TextView
                    android:textSize="@dimen/textsizeInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Dk1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|right"
                android:orientation="horizontal">

                <TextView
                    android:textSize="@dimen/textsizeInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Ddk1"
                    android:textColor="@color/colorUserInfoRight"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:background="@drawable/borderbottom"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|left">

                <TextView
                    android:textSize="@dimen/textsizeInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/DK2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|right"
                android:orientation="horizontal">

                <TextView
                    android:textSize="@dimen/textsizeInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/DdK2"
                    android:textColor="@color/colorUserInfoRight"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:background="@drawable/borderbottom"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|left">

                <TextView
                    android:textSize="@dimen/textsizeInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/DK3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|right"
                android:orientation="horizontal">

                <TextView
                    android:textSize="@dimen/textsizeInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/DdK3"
                    android:textColor="@color/colorUserInfoRight"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:background="@drawable/borderbottom"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|left">

                <TextView
                    android:textSize="@dimen/textsizeInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/DK4" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|right"
                android:orientation="horizontal">

                <TextView
                    android:textSize="@dimen/textsizeInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/DdK4"
                    android:textColor="@color/colorUserInfoRight"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:background="@drawable/borderbottom"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|left">

                <TextView
                    android:textSize="@dimen/textsizeInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/KT1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|right"
                android:orientation="horizontal">

                <TextView
                    android:textSize="@dimen/textsizeInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/DkT1"
                    android:textColor="@color/colorUserInfoRight"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:background="@drawable/borderbottom"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|left">

                <TextView
                    android:textSize="@dimen/textsizeInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/KT2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|right"
                android:orientation="horizontal">

                <TextView
                    android:textSize="@dimen/textsizeInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/DkT2"
                    android:textColor="@color/colorUserInfoRight"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:background="@drawable/borderbottom"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|left">

                <TextView
                    android:textSize="@dimen/textsizeInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/DTB" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|right"
                android:orientation="horizontal">

                <TextView
                    android:textSize="@dimen/textsizeInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/DDTB"
                    android:textColor="@color/colorUserInfoRight"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|left">

                <TextView
                    android:textSize="@dimen/textsizeInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TH" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|right"
                android:orientation="horizontal">

                <TextView
                    android:textSize="@dimen/textsizeInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/HT"
                    android:textColor="@color/colorUserInfoRight"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TabLayout
            android:id="@+id/main_tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_primary"
            app:tabGravity="fill"
            app:tabIndicatorColor="@android:color/transparent"
            app:tabMode="fixed" />
    </LinearLayout>
</LinearLayout>