<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:background="@color/CustomColorButtonStart"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="match_parent">
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:gravity="left"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/Tabtittlescore"
                android:textColor="@color/colorLogin"
                android:textSize="@dimen/textsizeTitle"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:background="@color/colorBackgroundLoginOne"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:textSize="@dimen/textsizeScore"
                android:textStyle="bold"
                android:textColor="@color/colorLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Monhoc" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:textSize="@dimen/textsizeScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Diemtrungbinh"
                android:textColor="@color/colorLogin"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:textSize="@dimen/textsizeScore"
                android:textStyle="bold"
                android:textColor="@color/colorLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Trangthai" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9">

       <android.support.v7.widget.RecyclerView
           android:id="@+id/recyclerViewList"
           android:layout_width="match_parent"
           android:layout_height="match_parent">

       </android.support.v7.widget.RecyclerView>
    </LinearLayout>

</LinearLayout>